--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+html {
+    font-size: 62.5%; // This defines what 1rem is: 1 rem = 10px; 10px/16px = 62.5%
+}
+
+body {
+    margin: 0;
+}
