--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 html {
     font-size: 62.5%; // This defines what 1rem is: 1 rem = 10px; 10px/16px = 62.5%
+    font-family: 'Roboto:300', sans-serif;
 }
 
 body {
