--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="app-wrapper">
   <app-nav class="nav"></app-nav>
   <div class="content-wrapper">
-    <div class="content">
+    <div class="projects">
       <router-outlet></router-outlet>
     </div>
   </div>
