--- a/src/app/Components/nav/nav.component.scss
+++ b/src/app/Components/nav/nav.component.scss
@@ -42,6 +42,12 @@
     height: 34%;
     display: flex;
     align-items: center;
+    padding: 0 2rem;
+    padding-top: 1rem;
+    @media only screen and (max-width: 800px) {
+        padding: 0 1rem;
+        padding-top: 0;
+    }
 }
 
 .top-right {
@@ -70,6 +76,12 @@
         position: relative;
         bottom: 0rem;
         transition: 0.2s;
+        svg {
+            position: relative;
+            bottom: 0rem;
+            transition: 0.1s;
+            filter: drop-shadow(0 0 0 rgba(18, 25, 59, 0.1))
+        }
     }
     transition: 0.5s;
     background-color: rgba(255, 255, 255, 0);
@@ -84,6 +96,12 @@
         @media only screen and (min-width: 800px) {
             div, h3 {
                 bottom: 0.2rem;
+                svg {
+                    position: relative;
+                    bottom: 0.1rem;
+                    transition: 0.1s;
+                    filter: drop-shadow(0 0.3rem 0.1rem rgba(18, 25, 59, 0.6));
+                }
             }
             background-color: rgba(255, 255, 255, 0.10);
             padding-bottom: -1rem;
