--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,10 @@
 html {
     font-size: 62.5%; // This defines what 1rem is: 1 rem = 10px; 10px/16px = 62.5%
-    font-family: 'Roboto:300', sans-serif;
+    font-family: 'Roboto', sans-serif;
+}
+
+h1,h2,h3,h4,h5,p {    
+    font-weight: 100 !important;
 }
 
 body {
