many things add

--- a/src/app/Components/info/info.component.html
+++ b/src/app/Components/info/info.component.html
@@ -1,4 +1,115 @@
 <div class="container">
-
+    <div class="left">
+        <div class="section-title">
+            <h2>About Me</h2>
+        </div>
+        <div class="section-container">
+            <div class="img-container">
+                <div class="img-placeholder">
+                </div>
+            </div>
+            <div class="aboutme-container">
+                <p class="aboutme-text">
+                    Nacido en Madrid y graduado en Ingeniería Informática, Diseño y Desarrollo de Videojuegos.
+                </p>
+                <p class="aboutme-text">
+                    Me apasionan los proyectos que requieren creatividad y dedicación, y trabajar en ellos hasta llegar a su estado óptimo.
+                </p>
+                <p class="aboutme-text">
+                    En el ámbito de la programación, trabajo con tecnologías como HTML, CSS, JavaScript, Angular, Ionic, y C#.
+                </p>
+                <p class="aboutme-text">
+                    En cuanto a diseño, trabajo con herramientas como Adobe Photoshop, Adobe Illustrator, ZBrush, Blender, Adobe Animate y Sony Vegas, para desarrollar proyectos en modelado 3D, animación, edición de imagen, edición de vídeo y diseño general.
+                </p>
+                <p class="aboutme-text">
+                    Unity es el motor utilizado en todos mis videojuegos. También he trabajado con Unreal Engine en proyectos puntuales.    
+                </p>
+                <p class="aboutme-text">
+                    En este Portfolio podrás ver mis trabajos más recientes de cada categoría.   
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="right">
+        <div class="section-title">
+            <h2>Experience Timeline</h2>
+        </div>
+        <div class="section-container">
+            <div class="timeline">
+                <div class="event event--secondary">
+                    <div class="event-date event-date--secondary">
+                        <h4>2010 - Now</h4>
+                    </div>
+                    <div class="event-text event-text--secondary">
+                        <h3>Photoshop</h3>
+                    </div>
+                </div>
+                <div class="event event--secondary">
+                    <div class="event-date event-date--secondary">
+                        <h4>2011 - Now</h4>
+                    </div>
+                    <div class="event-text event-text--secondary">
+                        <h3>Blender</h3>
+                    </div>
+                </div>
+                <div class="event event--secondary">
+                    <div class="event-date event-date--secondary">
+                        <h4>2013 - Now</h4>
+                    </div>
+                    <div class="event-text event-text--secondary">
+                        <h3>C#, Unity</h3>
+                    </div>
+                </div>
+                <div class="event">
+                    <div class="event-date">
+                        <h3>2014 - 2018</h3>
+                    </div>
+                    <div class="event-text">
+                        <h2>Ingeniería Informática,<br class="event-line-break"/>D. D. de Videojuegos (URJC)</h2>
+                    </div>
+                </div>
+                <div class="event event--secondary">
+                    <div class="event-date event-date--secondary">
+                        <h4>2015 - Now</h4>
+                    </div>
+                    <div class="event-text event-text--secondary">
+                        <h3>JavaScript, HTML, CSS</h3>
+                    </div>
+                </div>
+                <div class="event">
+                    <div class="event-date">
+                        <h3>2017 - 2018</h3>
+                    </div>
+                    <div class="event-text">
+                        <h2>SpikaTech - FrontEnd,<br class="event-line-break"/>BackEnd, UX</h2>
+                    </div>
+                </div>
+                <div class="event event--secondary">
+                    <div class="event-date event-date--secondary">
+                        <h4>2018 - Now</h4>
+                    </div>
+                    <div class="event-text event-text--secondary">
+                        <h3>Angular, Ionic</h3>
+                    </div>
+                </div>
+                <div class="event event--secondary">
+                    <div class="event-date event-date--secondary">
+                        <h4>2019 - Now</h4>
+                    </div>
+                    <div class="event-text event-text--secondary">
+                        <h3>React</h3>
+                    </div>
+                </div>
+                <div class="event">
+                    <div class="event-date">
+                        <h3>2019 - Now</h3>
+                    </div>
+                    <div class="event-text">
+                        <h2>Minsait, Indra - FrontEnd<br class="event-line-break"/>Developer</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
