--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -6,6 +6,7 @@
         </div>
     </div>
     <div class="bottom nav-padding">
+        <div class="bottom-shine"></div>
         <div class="projects">
             <div class="icon-box">
                 <svg class="icon--small" width="25" height="28" viewBox="0 0 25 28" fill="none" xmlns="http://www.w3.org/2000/svg">
