--- a/src/app/Components/info/info.component.scss
+++ b/src/app/Components/info/info.component.scss
@@ -1,5 +1,214 @@
+@import '../../../variables.scss';
+
 .container {
+    height: 40rem;
+    display: flex;
+    padding: 2rem;
+    padding-top: 0;
+    margin-top: 4rem;
+    @media only screen and (max-width: 800px) {
+        flex-direction: column;
+        height: auto;
+    }
+}
+
+.section-title {
+    cursor: default;
+    width: 40%;
+    flex-grow: 1;    
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2rem;    
+    background: rgb(19,52,137);
+    background: linear-gradient(162deg, #133489 0%, #1c879e 50%, #a6ffd4 100%);
+    h2 {
+        color: $primary-textColor;
+        margin: 0;
+    }
+    @media only screen and (max-width: 800px) {
+        width: 50%;
+        padding: 0.3rem;
+    }
+}
+
+.section-container {    
+    display: flex;
+    height: 88%;
     width: 100%;
+    @media only screen and (max-width: 800px) {
+        flex-direction: column;
+    }
+}
+
+.left {
+    position: relative;
+    width: 50%;
+    height: 100%;
+    margin-right: 1rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    animation-name: leftEnter;
+    animation-duration: 0.6s;
+    @media only screen and (max-width: 800px) {
+        width: 100%;
+        margin-right: 0;
+    }
+}
+
+.img-container {    
+    @media only screen and (max-width: 800px) {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+.img-placeholder {
+    height: 100%;
+    width: 22rem;
+    background: rgb(167,218,239);
+    background: linear-gradient(162deg, rgba(167,218,239,1) 0%, rgba(188,239,215,1) 100%);
+    @media only screen and (max-width: 800px) {
+        height: 14rem;
+        width: 10rem;
+    }
+}
+
+.aboutme-container {
+    width: 50%;
+    padding: 1rem;
+    font-size: 1.2rem;
+    text-align: justify;
+    flex-grow: 1;
+    @media only screen and (max-width: 800px) {
+        width: auto;
+    }
+}
+
+.aboutme-text {
+    color: $secondary-textColor;
+    margin: 0;
+    margin-block-end: 1em;
+    @media only screen and (max-width: 800px) {
+        margin-block-end: 0.5em;
+    }
+}
+
+.right {
+    position: relative;
+    width: 50%;
+    margin-left: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    animation-name: rightEnter;
+    animation-duration: 0.6s;
+    @media only screen and (max-width: 800px) {
+        width: 100%;
+        margin-left: 0;
+        margin-top: 4rem;
+    }
+}
+
+.timeline {
+    cursor: default;
+    width: 0.4rem;
+    padding: 1rem 0;
+    background: #1b819d;
+    background: linear-gradient(0deg, #1b819d 0%, #54b8b4 100%);
+    position: relative;
+    left: 32%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 10rem;
+}
+
+.event {
+    position: relative;
+    display: flex;
+    align-items: center;
+    background-color: $primary-timelineColor;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 10rem;
+    margin: 1rem 0;
+    &--secondary {
+        width: 1rem;
+        height: 1rem;
+        background-color: $secondary-timelineColor;        
+    }
+    @media only screen and (max-width: 800px) {
+        margin: 2rem 0;
+    }
+}
+
+.event-line-break {
+    @media only screen and (min-width: 800px) {
+        display: none;
+    }
+}
+
+.event-date {
+    position: absolute;
+    transform: translateX(-100%);
+    padding-right: 1rem;
+    color: #4474ab;
+    h3 {
+        font-size: 1.3rem;
+        margin: 0;
+        white-space: nowrap;
+    }
+    &--secondary {
+        color: #a2e2d9;
+        h4 {
+            margin: 0;
+            white-space: nowrap;
+        }
+    }
+}
+
+.event-text {
+    position: absolute;
+    right: 0;
+    transform: translateX(100%);
+    padding-left: 1rem;
+    color: $primary-timelineColor;
+    h2 {
+        margin: 0;
+        white-space: nowrap;
+    }
+    &--secondary {
+        color: $secondary-timelineColor;
+        h3 {
+            margin: 0;
+            white-space: nowrap;
+        }
+    }
+}
+
+@keyframes leftEnter {
+    from {
+        animation-timing-function: ease-out;
+        right: 100rem;
+    }
+    to {
+        animation-timing-function: ease-in;        
+        right: 0rem;
+    }
+}
+
+@keyframes rightEnter {
+    from {
+        animation-timing-function: ease-out;
+        left: 100rem;
+    }
+    to {
+        animation-timing-function: ease-in;        
+        left: 0rem;
+    }
 }
