--- a/src/app/Components/nav/nav.component.scss
+++ b/src/app/Components/nav/nav.component.scss
@@ -55,17 +55,33 @@
 }
 
 .bottom {
+    position: relative;
     flex-grow: 1;
     padding-top: 1rem;
     display: flex;
     align-items: bottom;
-    justify-content: space-around;
+    justify-content: space-around;    
+    overflow: hidden;
     @media only screen and (max-width: 800px) {
         padding-top: 0;
     }
+    @media only screen and (min-width: 1300px) {
+        padding: 0 16%;
+    }
+}
+
+.bottom-shine {
+    position: absolute;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(255,255,255);
+    background: linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.30062447342218135) 50%, rgba(255,255,255,0) 100%);
+    animation: projectsShine 1s forwards;
 }
 
 .projects {
+    z-index: 1;
     cursor: pointer;
     width: 26%;
     display: flex;
@@ -100,7 +116,7 @@
                     position: relative;
                     bottom: 0.1rem;
                     transition: 0.1s;
-                    filter: drop-shadow(0 0.3rem 0.1rem rgba(18, 25, 59, 0.6));
+                    filter: drop-shadow(0 0.2rem 0.1rem rgba(18, 25, 59, 0.6));
                 }
             }
             background-color: rgba(255, 255, 255, 0.10);
@@ -123,5 +139,16 @@
     width: 70%;
     &--small {
         height: 60%;
+    }
+}
+
+@keyframes projectsShine {
+    from {
+        animation-timing-function: linear;
+        transform: translateX(-100%);
+    }
+    to {
+        animation-timing-function: linear;
+        transform: translateX(100%);
     }
 }
