--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,15 @@
 <div class="app-wrapper">
   <app-nav class="nav"></app-nav>
   <div class="content-wrapper">
-    <div class="projects">
-      <router-outlet></router-outlet>
+    <div class="content">
+      <div class="projects">
+        <router-outlet></router-outlet>
+      </div>
+      <app-info></app-info>
+      <app-contact></app-contact>
     </div>
-    <app-info></app-info>
+    <div class="footer">
+      <app-footer></app-footer>
+    </div>
   </div>
 </div>
