--- a/src/variables.scss
+++ b/src/variables.scss
@@ -4,9 +4,13 @@
 // $quaternary-backgroundColor: #ffffff;
 
 $primary-textColor: #ffffff;
-$secondary-textColor: #476183;
+$secondary-textColor: #131313;
 $tertiary-textColor: #164F90;
 $quaternary-textColor: #1BA38E;
+
+$background-timelineColor: #329AA7;
+$primary-timelineColor: #164F90;
+$secondary-timelineColor: #6BCCBD;
 
 // $gray-textColor: #b5b5b5;
 // $borderColor: #e7f0f2;
