--- a/src/app/Components/info/info.component.scss
+++ b/src/app/Components/info/info.component.scss
@@ -3,7 +3,7 @@
 .container {
     height: 40rem;
     display: flex;
-    padding: 2rem;
+    padding: 4rem;
     padding-top: 0;
     margin-top: 4rem;
     @media only screen and (max-width: 800px) {
@@ -84,7 +84,8 @@
     text-align: justify;
     flex-grow: 1;
     @media only screen and (max-width: 800px) {
-        width: auto;
+        width: auto;        
+        margin-top: 1rem;
     }
 }
 
