--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,6 +16,7 @@
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
+    background: linear-gradient(162deg, #141b2d 0%, #1f4b54 72%, #2f5846 100%);
 }
 
 .content {
