--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,7 @@ body {
 
 ::-webkit-scrollbar-track {
     background: white;
+    background: rgba(0,0,0,0);
     // background: rgb(28,135,158);
     // background: linear-gradient(9deg, rgba(28,135,158,1) 0%, rgba(166,255,212,1) 100%);
 }
