--- a/src/app/Components/footer/footer.component.scss
+++ b/src/app/Components/footer/footer.component.scss
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: flex-end;
     background: rgb(19,52,137);
-    background: linear-gradient(162deg, rgba(19,52,137,1) 0%, rgba(28,135,158,1) 72%, rgba(166,255,212,1) 100%);    
+    background: linear-gradient(162deg, #2d4990 0%, rgba(28,135,158,1) 72%, rgba(166,255,212,1) 100%);    
 }
 
 .logo-container {
