--- a/src/app/Components/info/info.component.scss
+++ b/src/app/Components/info/info.component.scss
@@ -3,14 +3,12 @@
 .container {
     height: 40rem;
     display: flex;
-    padding: 4rem;
-    padding-top: 0;
+    padding: 0 4rem;
     margin-top: 4rem;
     @media only screen and (max-width: 800px) {
         flex-direction: column;
         height: auto;
-        padding: 2rem;
-        padding-top: 0;
+        padding: 0 2rem;
     }
 }
 
@@ -24,14 +22,14 @@
     justify-content: center;
     margin-bottom: 2rem;    
     background: rgb(19,52,137);
-    background: linear-gradient(162deg, #133489 0%, #1c879e 50%, #a6ffd4 100%);
+    background: linear-gradient(162deg, #2d4990 0%, #1c879e 50%, #a6ffd4 100%);
     h2 {
         color: $primary-textColor;
         margin: 0;
     }
     @media only screen and (max-width: 800px) {
-        width: 50%;
-        padding: 0.3rem;
+        width: 60%;
+        height: 2.5rem;
     }
 }
 
