--- a/src/app/Components/info/info.component.html
+++ b/src/app/Components/info/info.component.html
@@ -25,7 +25,7 @@
                     Unity es el motor utilizado en todos mis videojuegos. También he trabajado con Unreal Engine en proyectos puntuales.    
                 </p>
                 <p class="aboutme-text">
-                    En este Portfolio podrás ver mis trabajos más recientes de cada categoría.   
+                    En este Portfolio podrás ver mis trabajos más recientes, navegando por las tres categorías situadas en la parte superior de la página.   
                 </p>
             </div>
         </div>
@@ -34,9 +34,9 @@
         <div class="section-title">
             <h2>Experience Timeline</h2>
         </div>
-        <div class="section-container">
+        <div class="section-container section-container--not-overflow">
             <div class="timeline">
-                <div class="event event--secondary">
+                <div class="event event--secondary event__anim" [style.animation-duration]="'0.8s'">
                     <div class="event-date event-date--secondary">
                         <h4>2010 - Now</h4>
                     </div>
@@ -44,7 +44,7 @@
                         <h3>Photoshop</h3>
                     </div>
                 </div>
-                <div class="event event--secondary">
+                <div class="event event--secondary event__anim" [style.animation-duration]="'1s'">
                     <div class="event-date event-date--secondary">
                         <h4>2011 - Now</h4>
                     </div>
@@ -52,7 +52,7 @@
                         <h3>Blender</h3>
                     </div>
                 </div>
-                <div class="event event--secondary">
+                <div class="event event--secondary event__anim" [style.animation-duration]="'1.2s'">
                     <div class="event-date event-date--secondary">
                         <h4>2013 - Now</h4>
                     </div>
@@ -60,7 +60,7 @@
                         <h3>C#, Unity</h3>
                     </div>
                 </div>
-                <div class="event">
+                <div class="event event__anim2" [style.animation-duration]="'1.4s'">
                     <div class="event-date">
                         <h3>2014 - 2018</h3>
                     </div>
@@ -68,7 +68,7 @@
                         <h2>Ingeniería Informática,<br class="event-line-break"/>D. D. de Videojuegos (URJC)</h2>
                     </div>
                 </div>
-                <div class="event event--secondary">
+                <div class="event event--secondary event__anim2" [style.animation-duration]="'1.6s'">
                     <div class="event-date event-date--secondary">
                         <h4>2015 - Now</h4>
                     </div>
@@ -76,7 +76,7 @@
                         <h3>JavaScript, HTML, CSS</h3>
                     </div>
                 </div>
-                <div class="event">
+                <div class="event event__anim2" [style.animation-duration]="'1.8s'">
                     <div class="event-date">
                         <h3>2017 - 2018</h3>
                     </div>
@@ -84,7 +84,7 @@
                         <h2>SpikaTech - FrontEnd,<br class="event-line-break"/>BackEnd, UX</h2>
                     </div>
                 </div>
-                <div class="event event--secondary">
+                <div class="event event--secondary event__anim3" [style.animation-duration]="'2s'">
                     <div class="event-date event-date--secondary">
                         <h4>2018 - Now</h4>
                     </div>
@@ -92,7 +92,7 @@
                         <h3>Angular, Ionic</h3>
                     </div>
                 </div>
-                <div class="event event--secondary">
+                <div class="event event--secondary event__anim3" [style.animation-duration]="'2.2s'">
                     <div class="event-date event-date--secondary">
                         <h4>2019 - Now</h4>
                     </div>
@@ -100,7 +100,7 @@
                         <h3>React</h3>
                     </div>
                 </div>
-                <div class="event">
+                <div class="event event__anim3" [style.animation-duration]="'2.4s'">
                     <div class="event-date">
                         <h3>2019 - Now</h3>
                     </div>
