--- a/src/variables.scss
+++ b/src/variables.scss
@@ -5,7 +5,7 @@
 
 $primary-textColor: #ffffff;
 $secondary-textColor: #daeae3;
-$tertiary-textColor: #164F90;
+$tertiary-textColor: #85e2c7;
 $quaternary-textColor: #1BA38E;
 
 $background-timelineColor: #329AA7;
