--- a/src/app/Components/contact/contact.component.scss
+++ b/src/app/Components/contact/contact.component.scss
@@ -35,7 +35,24 @@
     margin: 0;
     margin-top: 1rem;
     h1 {
-        color: $secondary-textColor;
+        color: $primary-textColor;
         margin: 0;
     }
+}
+
+.logo-container {
+    cursor: pointer;
+    height: 4rem;
+    width: 100%;
+    color: $primary-textColor;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    h1 {
+        margin-left: 1rem;
+    }
+}
+
+.logo {
+    color: $primary-textColor;
 }
