--- a/src/app/Components/nav/nav.component.scss
+++ b/src/app/Components/nav/nav.component.scss
@@ -77,7 +77,7 @@
     height: 100%;
     background: rgb(255,255,255);
     background: linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.30062447342218135) 50%, rgba(255,255,255,0) 100%);
-    animation: projectsShine 1s forwards;
+    animation: projectsShine 3.5s forwards;
 }
 
 .projects {
@@ -132,6 +132,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    &--selected {
+        background: linear-gradient(162deg, #2d4990 0%, #1c879e 50%, #a6ffd4 100%);
+    }
 }
 
 .icon {
@@ -142,12 +145,20 @@
     }
 }
 
+.paddingDiv:focus {
+    outline: 0;
+}
+
 @keyframes projectsShine {
-    from {
+    0% {
         animation-timing-function: linear;
         transform: translateX(-100%);
     }
-    to {
+    80% {
+        animation-timing-function: linear;
+        transform: translateX(-100%);
+    }
+    100% {
         animation-timing-function: linear;
         transform: translateX(100%);
     }
