--- a/src/app/Components/info/info.component.html
+++ b/src/app/Components/info/info.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="left">
         <div class="section-title">
-            <h2>About Me</h2>
+            <h2>Sobre mí</h2>
         </div>
         <div class="section-container">
             <div class="img-container">
@@ -32,7 +32,7 @@
     </div>
     <div class="right">
         <div class="section-title">
-            <h2>Experience Timeline</h2>
+            <h2>Experiencia</h2>
         </div>
         <div class="section-container section-container--not-overflow">
             <div class="timeline">
