--- a/src/app/Components/software/software.component.html
+++ b/src/app/Components/software/software.component.html
@@ -5,7 +5,13 @@
             <h1 class="project-title">Angular 2+</h1>
             <div class="project-description">
                 <p class="description-text">
-                    Proyecto realizado en Angular 8, sobre la API PokeApi. La aplicación consiste en una "pokédex" que permite buscar pokémons y consultar sus detalles. Se realizan llamadas asíncronas a la API, se utiliza el routing de Angular y está organizada por componentes. Además, está traducida a varios idiomas mediante ngx-translate. Es una app responsive: está adaptada para pantallas de PC, de móvil y de tablet.
+                    Proyecto realizado en Angular 8, sobre la API PokeApi. La aplicación consiste en una "pokédex" que permite buscar pokémons y consultar sus detalles.
+                </p>
+                <p class="description-text">
+                    Se realizan llamadas asíncronas a la API, se utiliza el routing de Angular y está organizada por componentes. Además, está traducida a varios idiomas mediante ngx-translate. 
+                </p>
+                <p class="description-text">
+                    Es una app responsive: está adaptada para pantallas de PC, de móvil y de tablet.
                 </p>
             </div>
             <div class="project-link" (click)="goToUrl('https://jordoe.github.io/PokeAngular')">+ Enlace a la app</div>
@@ -16,7 +22,16 @@
             <h1 class="project-title">Ionic</h1>
             <div class="project-description">
                 <p class="description-text">
-                    Aplicación realizada con Ionic 4 y Angular 8, sobre la API TheMovieDb. Consiste en un buscador de películas con dos tipos de búsqueda: un módulo que devuelve una película aleatoria basada en los filtros introducidos, y otro en el que se permite encontrar películas mediante búsqueda de texto, ordenándolos como prefiera el usuario. Además, pueden marcarse las películas como "guardada", "vista" y "favorita". Así mismo, pueden consultarse detalles tanto de las películas como de los directores y actores.
+                    Aplicación realizada con Ionic 4 y Angular 8, sobre la API TheMovieDb.
+                </p>
+                <p class="description-text">
+                    Consiste en un buscador de películas con dos tipos de búsqueda: un módulo que devuelve una película aleatoria basada en los filtros introducidos, y otro en el que se permite encontrar películas mediante búsqueda de texto, ordenándolos como prefiera el usuario.
+                </p>
+                <p class="description-text">
+                    También pueden marcarse las películas como "guardada", "vista" y "favorita". Así mismo, pueden consultarse detalles tanto de las películas como de los directores y actores.
+                </p>
+                <p class="description-text">
+                    Tiene traduciones con ngx-translate y, además de ser responsive al igual que la app anterior, saca provecho de Ionic para mostrar elementos nativos, como los "picker", de distinta forma dependiendo del tipo de dispositivo (Android o iOs).
                 </p>
             </div>
             <div class="project-link" (click)="goToUrl('https://jordoe.github.io/ionic-imdb')">+ Enlace a la app</div>
@@ -27,7 +42,10 @@
             <h1 class="project-title">GitHub</h1>
             <div class="project-description">
                 <p class="description-text">
-                    Todos mis proyectos almacenados en GitHub. 
+                    Todos mis proyectos de desarrollo software almacenados en GitHub.
+                </p>
+                <p class="description-text">
+                    Además de los proyectos anteriores, pueden encontrarse otros de JavaScript nativo (a la vez que HTML y CSS), de C# y de Java.
                 </p>
             </div>
             <div class="project-link" (click)="goToUrl('https://github.com/jordoe')">+ Enlace a GitHub</div>
