--- a/src/app/Components/videogames/videogames.component.html
+++ b/src/app/Components/videogames/videogames.component.html
@@ -1,1 +1,64 @@
-<p>videogames works!</p>
+<div class="container">
+    <div class="projects-container">
+        <div class="project">
+            <div class="project-image"></div>
+            <h1 class="project-title">Laser Dasher</h1>
+            <div class="project-description">
+                <p class="description-text">
+                    Juego Arcade infinito para dispositivos Android. Esquiva los lásers para llegar lo más lejos posible y desbloquea todos los personajes y objetos.
+                </p>                
+                <p class="description-text">
+                    Un videojuego "solo-developed", creado en Unity, y usando Illustrator y Photoshop para crear los assets visuales.
+                </p>                
+                <p class="description-text">
+                    Disponible en Google Play.
+                </p>
+            </div>
+            <div class="project-link" (click)="goToUrl('https://play.google.com/store/apps/details?id=com.NonamGames.LaserDasher&hl=es_419')">+ Enlace al juego en Google Play</div>
+        </div>
+        <div class="project">
+            <div class="project-image"></div>
+            <h1 class="project-title">Project Oneiric</h1>
+            <div class="project-description">
+                <p class="description-text">
+                    Aventura Gráfica para PC que narra la historia de un ciudadano polaco en la Segunda Guerra Mundial. Descubre la forma de salir de cada nivel usando tu ingenio en esta aventura onírica.
+                </p>
+                <p class="description-text">
+                    Realizado en Unity, con modelos 3D creados y riggeados en Blender, y texturas realizadas en Substance Painter. Programado en C#.
+                </p>
+                <p class="description-text">
+                    Con la colaboración del actor de doblaje profesional Claudio Serrano.
+                </p>
+            </div>
+            <div class="project-link" (click)="goToUrl('https://www.youtube.com/watch?v=JLnH-I6xi9s')">+ Enlace al Gameplay</div>
+        </div>
+        <div class="project">
+            <div class="project-image"></div>
+            <h1 class="project-title">Oh My Lord Tournament</h1>
+            <div class="project-description">
+                <p class="description-text">
+                    Un frenético Brawler multijugador con personalidad única para PC. Vence a tu enemigo con tus habilidades y la ayuda de los Helpers, y consigue avanzar hasta el preciado trofeo.
+                </p>
+                <p class="description-text">
+                    Realizado en Unity, con Sprites creados en Photoshop. Personajes animados en Unity con Anima2D.
+                </p>
+                <p class="description-text">
+                    Disponible para descargar en Itch.io.
+                </p>
+            </div>
+            <div class="project-link" (click)="goToUrl('https://greenglobsalsa.itch.io/oh-my-lord-tournament')">+ Enlace a su página de Itch.io</div>
+            <div class="project-link" (click)="goToUrl('https://www.youtube.com/watch?v=ZP-kMu_lxaw')">+ Enlace al Gameplay</div>
+        </div>
+        <div class="project">
+            <div class="project-image"></div>
+            <h1 class="project-title">GreenGlob</h1>
+            <div class="project-description">
+                <p class="description-text">
+                    Página de Itch.io con los proyectos realizados junto al resto del equipo de GreenGlob, incluyendo juegos de GameJams y proyectos experimentales.
+                </p>
+            </div>
+            <div class="project-link" (click)="goToUrl('https://greenglobsalsa.itch.io/')">+ Enlace a la página de Itch.io</div>
+        </div>
+    </div>
+    <div class="separator"></div>
+</div>
