--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <div class="app-wrapper">
-  <app-nav class="nav"></app-nav>
+  <app-nav class="nav" (selectContactEvent)="contactSelected()"></app-nav>
   <div class="content-wrapper" id="scroll">
     <div class="content">
       <div class="projects">
