--- a/src/app/Components/contact/contact.component.scss
+++ b/src/app/Components/contact/contact.component.scss
@@ -1,7 +1,7 @@
 @import '../../../variables.scss';
 
 .container {
-    height: 10rem;
+    height: 14rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,8 +17,7 @@
     text-align: center;
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-bottom: 0.5rem;   
+    justify-content: center; 
     background: rgb(19,52,137);
     background: linear-gradient(162deg, #133489 0%, #1c879e 50%, #a6ffd4 100%);
     h2 {
@@ -33,22 +32,28 @@
 .email {
     cursor: pointer;
     margin: 0;
-    margin-top: 1rem;
-    h1 {
+    margin-top: 1.5rem;
+    a {
+        font-size: 2em;
+        text-decoration: none;
         color: $primary-textColor;
         margin: 0;
     }
 }
 
+.linkedin {
+    margin-top: 1.5rem;
+}
+
 .logo-container {
     cursor: pointer;
-    height: 4rem;
     width: 100%;
     color: $primary-textColor;
     display: flex;
     align-items: center;
     justify-content: center;
     h1 {
+        margin: 0;
         margin-left: 1rem;
     }
 }
