--- a/src/app/Components/nav/nav.component.scss
+++ b/src/app/Components/nav/nav.component.scss
@@ -92,12 +92,6 @@
         position: relative;
         bottom: 0rem;
         transition: 0.2s;
-        svg {
-            position: relative;
-            bottom: 0rem;
-            transition: 0.1s;
-            filter: drop-shadow(0 0 0 rgba(18, 25, 59, 0.1))
-        }
     }
     transition: 0.5s;
     background-color: rgba(255, 255, 255, 0);
@@ -108,7 +102,6 @@
         padding: 0.5rem;
     }
     &:hover {
-        // outline: 2px solid white;
         @media only screen and (min-width: 800px) {
             div, h3 {
                 bottom: 0.2rem;
@@ -142,6 +135,12 @@
     width: 70%;
     &--small {
         height: 60%;
+    }
+    &__selected {
+        position: relative;
+        bottom: 0.1rem;
+        transition: 0.1s;
+        filter: drop-shadow(0 0.2rem 0.1rem rgba(18, 25, 59, 0.6));
     }
 }
 
