--- a/src/app/Components/software/software.component.html
+++ b/src/app/Components/software/software.component.html
@@ -31,7 +31,7 @@
                     También pueden marcarse las películas como "guardada", "vista" y "favorita". Así mismo, pueden consultarse detalles tanto de las películas como de los directores y actores.
                 </p>
                 <p class="description-text">
-                    Tiene traduciones con ngx-translate y, además de ser responsive al igual que la app anterior, saca provecho de Ionic para mostrar elementos nativos, como los "picker", de distinta forma dependiendo del tipo de dispositivo (Android o iOs).
+                    Tiene traduciones con ngx-translate y, además de ser responsive al igual que la app anterior, saca provecho de Ionic para mostrar elementos nativos, como los "picker", de forma distinta dependiendo del tipo de dispositivo (Android o iOs).
                 </p>
             </div>
             <div class="project-link" (click)="goToUrl('https://jordoe.github.io/ionic-imdb')">+ Enlace a la app</div>
