--- a/src/app/Components/contact/contact.component.scss
+++ b/src/app/Components/contact/contact.component.scss
@@ -18,8 +18,8 @@
     display: flex;
     align-items: center;
     justify-content: center; 
-    background: rgb(19,52,137);
-    background: linear-gradient(162deg, #133489 0%, #1c879e 50%, #a6ffd4 100%);
+    background: #171c29;
+    // background: linear-gradient(162deg, #133489 0%, #1c879e 50%, #a6ffd4 100%);
     h2 {
         color: $primary-textColor;
         margin: 0;
