--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,7 +16,9 @@
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
-    background: linear-gradient(162deg, #141b2d 0%, #1f4b54 72%, #151d2e 100%);
+    background: linear-gradient(162deg, #0e245a 0%, #176b7d 81%, #65b58f 100%);
+    // background: linear-gradient(162deg, #133489 0%, #1c879e 81%, #8ae0b7 100%);
+    // background: linear-gradient(162deg, #141b2d 0%, #1f4b54 72%, #151d2e 100%);
 }
 
 .content {
