--- a/src/app/Components/design/design.component.scss
+++ b/src/app/Components/design/design.component.scss
@@ -77,7 +77,8 @@
     height: 0.2rem;
     margin-bottom: 2rem;
     background: #133489;
-    background: linear-gradient(162deg, #2d4990 0%, #1c879e 50%, #a6ffd4 100%);
+    // background: linear-gradient(162deg, #2d4990 0%, #1c879e 50%, #a6ffd4 100%);
+    background: linear-gradient(162deg, #6dbfd6 0%, #6be2dd 100%);
     @media only screen and (min-width: 800px) {        
         width: 92%;
         margin-top: 7rem;
