--- a/src/app/Components/info/info.component.scss
+++ b/src/app/Components/info/info.component.scss
@@ -21,8 +21,8 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 2rem;    
-    background: rgb(19,52,137);
-    background: linear-gradient(162deg, #2d4990 0%, #1c879e 50%, #a6ffd4 100%);
+    background: #171c29;
+    // background: linear-gradient(162deg, #2d4990 0%, #1c879e 50%, #a6ffd4 100%);
     h2 {
         color: $primary-textColor;
         margin: 0;
@@ -122,7 +122,8 @@
     width: 0.4rem;
     padding: 1rem 0;
     background: #1b819d;
-    background: linear-gradient(0deg, #1b819d 0%, #54b8b4 100%);
+    // background: linear-gradient(0deg, #1b819d 0%, #54b8b4 100%);
+    background: linear-gradient(0deg, #6dbfd6 0%, #6be2dd 100%);
     position: relative;
     left: 32%;
     display: flex;
