--- a/src/app/Components/nav/nav.component.scss
+++ b/src/app/Components/nav/nav.component.scss
@@ -5,8 +5,8 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    background: rgb(19,52,137);
-    background: linear-gradient(162deg, #2d4990 0%, rgba(28,135,158,1) 72%, rgba(166,255,212,1) 100%);    
+    background: #171c29;
+    // background: linear-gradient(162deg, #2d4990 0%, rgba(28,135,158,1) 72%, rgba(166,255,212,1) 100%);    
 }
 
 .text {
@@ -76,7 +76,7 @@
     width: 100%;
     height: 100%;
     background: rgb(255,255,255);
-    background: linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.30062447342218135) 50%, rgba(255,255,255,0) 100%);
+    background: linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.15) 50%, rgba(255,255,255,0) 100%);
     animation: projectsShine 3.5s forwards;
 }
 
