--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,9 @@ body {
 
 ::-webkit-scrollbar {
     width: 10px;
+    @media only screen and (max-width: 800px) {
+        width: 0;
+    }
 }
 
 ::-webkit-scrollbar-track {
@@ -24,7 +27,8 @@ body {
    
 ::-webkit-scrollbar-thumb {
     // background: #196b97;
-    background: #a6ffd4;
+    // background: #a6ffd4;
+    background: #171c29;
 }
   
 ::-webkit-scrollbar-thumb:hover {
