--- a/src/app/Components/software/software.component.html
+++ b/src/app/Components/software/software.component.html
@@ -1,7 +1,9 @@
 <div class="container">
     <div class="projects-container">
         <div class="project">
-            <div class="project-image"></div>
+            <div class="project-image">
+                <img src="assets/images/angular.png" alt="angular image" />
+            </div>
             <h1 class="project-title">Angular 2+</h1>
             <div class="project-description">
                 <p class="description-text">
@@ -18,7 +20,9 @@
             <div class="project-link" (click)="goToUrl('https://github.com/jordoe/PokeAngular')">+ Enlace al repositorio</div>
         </div>
         <div class="project">
-            <div class="project-image"></div>
+            <div class="project-image">
+                <img src="assets/images/ionic.png" alt="angular image" />
+            </div>
             <h1 class="project-title">Ionic</h1>
             <div class="project-description">
                 <p class="description-text">
