--- a/src/app/Components/design/design.component.html
+++ b/src/app/Components/design/design.component.html
@@ -1,7 +1,9 @@
 <div class="container">
     <div class="projects-container">
         <div class="project">
-            <div class="project-image"></div>
+            <div class="project-image">
+                <img src="assets/images/figma.png" alt="angular image" />
+            </div>
             <h1 class="project-title">Diseños Web</h1>
             <div class="project-description">
                 <p class="description-text">
