--- a/src/app/Components/design/design.component.scss
+++ b/src/app/Components/design/design.component.scss
@@ -39,6 +39,9 @@
     height: 20rem;
     background: #a7daef;
     background: linear-gradient(162deg, #a7daef 0%, #bcefd7 100%);
+    img {
+        width: 100%;
+    }
 }
 
 .project-title {
