--- a/src/app/Components/software/software.component.html
+++ b/src/app/Components/software/software.component.html
@@ -42,7 +42,9 @@
             <div class="project-link" (click)="goToUrl('https://github.com/jordoe/ionic-imdb')">+ Enlace al repositorio</div>
         </div>
         <div class="project">
-            <div class="project-image"></div>
+            <div class="project-image">
+                <img src="assets/images/github.png" alt="angular image" />
+            </div>
             <h1 class="project-title">GitHub</h1>
             <div class="project-description">
                 <p class="description-text">
