--- a/src/app/Components/videogames/videogames.component.scss
+++ b/src/app/Components/videogames/videogames.component.scss
@@ -37,8 +37,10 @@
 .project-image {
     width: 100%;
     height: 20rem;
-    background: #a7daef;
-    background: linear-gradient(162deg, #a7daef 0%, #bcefd7 100%);
+    background: #171c29;
+    img {
+        width: 100%;
+    }
 }
 
 .project-title {
