--- a/src/app/Components/design/design.component.html
+++ b/src/app/Components/design/design.component.html
@@ -15,7 +15,9 @@
             <div class="project-link" (click)="goToUrl('https://www.figma.com/file/6aOpc7xlZFUv27c3bKkwnR/Amet-Wears')">+ Boceto Web de Ropa</div>
         </div>
         <div class="project">
-            <div class="project-image"></div>
+            <div class="project-image">
+                <img src="assets/images/modelling.png" alt="angular image" />
+            </div>
             <h1 class="project-title">Modelos 3D</h1>
             <div class="project-description">
                 <p class="description-text">
@@ -25,7 +27,9 @@
             <div class="project-link">+ Enlace Próximamente</div>
         </div>
         <div class="project">
-            <div class="project-image"></div>
+            <div class="project-image">
+                <img src="assets/images/photoshop.png" alt="angular image" />
+            </div>
             <h1 class="project-title">Composición</h1>
             <div class="project-description">
                 <p class="description-text">
