--- a/src/app/Components/info/info.component.html
+++ b/src/app/Components/info/info.component.html
@@ -6,6 +6,7 @@
         <div class="section-container">
             <div class="img-container">
                 <div class="img-placeholder">
+                    <img src="assets/images/profile.jpg" alt="angular image" />   
                 </div>
             </div>
             <div class="aboutme-container">
