--- a/src/app/Components/videogames/videogames.component.html
+++ b/src/app/Components/videogames/videogames.component.html
@@ -1,7 +1,9 @@
 <div class="container">
     <div class="projects-container">
         <div class="project">
-            <div class="project-image"></div>
+            <div class="project-image">
+                <img src="assets/images/laserdasher.png" alt="angular image" />
+            </div>
             <h1 class="project-title">Laser Dasher</h1>
             <div class="project-description">
                 <p class="description-text">
@@ -17,7 +19,9 @@
             <div class="project-link" (click)="goToUrl('https://play.google.com/store/apps/details?id=com.NonamGames.LaserDasher&hl=es_419')">+ Enlace al juego en Google Play</div>
         </div>
         <div class="project">
-            <div class="project-image"></div>
+            <div class="project-image">
+                <img src="assets/images/oneiric.png" alt="angular image" />
+            </div>
             <h1 class="project-title">Project Oneiric</h1>
             <div class="project-description">
                 <p class="description-text">
@@ -33,7 +37,9 @@
             <div class="project-link" (click)="goToUrl('https://www.youtube.com/watch?v=JLnH-I6xi9s')">+ Enlace al Gameplay</div>
         </div>
         <div class="project">
-            <div class="project-image"></div>
+            <div class="project-image">
+                <img src="assets/images/ohmylord.png" alt="angular image" />
+            </div>
             <h1 class="project-title">Oh My Lord Tournament</h1>
             <div class="project-description">
                 <p class="description-text">
@@ -50,7 +56,9 @@
             <div class="project-link" (click)="goToUrl('https://www.youtube.com/watch?v=ZP-kMu_lxaw')">+ Enlace al Gameplay</div>
         </div>
         <div class="project">
-            <div class="project-image"></div>
+            <div class="project-image">
+                <img src="assets/images/greenglob.png" alt="angular image" />
+            </div>
             <h1 class="project-title">GreenGlob</h1>
             <div class="project-description">
                 <p class="description-text">
